Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -72,15 +72,13 @@
       <h2>Contacto</h2>
       <p>¿Tienes ideas o sugerencias? ¡Contáctanos y comparte con nosotros!</p>
 
-    <form action="https://formsubmit.co/djayudax@gmail.com" method="POST">
+    <form action="https://formsubmit.co/0b04a7e8cc063de8e95ec910194f8c76" method="POST">
     <input type="text" name="name" placeholder="Tu nombre (mínimo 3 letras)" required pattern="[A-Za-z\s]{3,}">
     <input type="email" name="email" placeholder="Tu correo (email válido)" required>
     <textarea name="message" placeholder="Tu mensaje aquí (mínimo 10 caracteres)" required minlength="10"></textarea>
     <button type="submit">Enviar</button>
 
-    <!-- Opcionales -->
-    <input type="hidden" name="_next" value="http://127.0.0.1:5500/gracias.html">
-    <!-- <p>implementar el input anterior como un mensaje en la pantalla y que se cierre solo y rediriga a la pantalla principal</p> -->
+    <input type="hidden" name="_next" value="https://djfunny1.github.io/editor/gracias.html">
     <input type="hidden" name="_captcha" value="false">
     </form>
 
@@ -92,4 +90,5 @@
   </footer>
   <a href="#" class="scroll-top" title="Volver arriba">↑</a>
 </body>
+
 </html>
