Change contact form action URL
Updated the contact form action URL to use FormSubmit service.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h2>Contacto</h2>
       <p>¿Tienes ideas o sugerencias? ¡Contáctanos y comparte con nosotros!</p>
 
-    <form action="0b04a7e8cc063de8e95ec910194f8c76" method="POST">
+    <form action="https://formsubmit.co/djayudax@gmail.com" method="POST">
     <input type="text" name="name" placeholder="Tu nombre (mínimo 3 letras)" required pattern="[A-Za-z\s]{3,}">
     <input type="email" name="email" placeholder="Tu correo (email válido)" required>
     <textarea name="message" placeholder="Tu mensaje aquí (mínimo 10 caracteres)" required minlength="10"></textarea>
@@ -92,4 +92,5 @@
 </body>
 
 </html>
+
 
